can clear matrix/localstorage, cutting off decimals for better use of localstorage, fixed new_game bug, discover variable bug

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -47,6 +47,21 @@ hr {
     text-transform: uppercase;
 }
 
+.clear {
+    text-align: center;
+    width: 160px;
+    padding: 20px;
+    border-radius: 3px;
+    background-color: #ccc;
+    margin: auto;
+    color: white;
+    cursor: pointer;
+    transition: all 200ms linear;
+    &:hover {
+        background-color: #aaa;
+    }
+}
+
 .notification {
     opacity: 0;
     pointer-events: none;
